[gd_scene load_steps=2 format=3 uid="uid://b7h5f8k3q2nan"]

[ext_resource type="Script" path="res://scripts/ui/TreeMap.gd" id="1_treemap"]

[node name="TreeMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2(800, 840)
script = ExtResource("1_treemap")

[node name="LinesContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
z_index = -1

[node name="NodesContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
z_index = 1